--- a/manifest.json
+++ b/manifest.json
@@ -4,11 +4,13 @@
   "icons": [{
       "src": "./ressources/icon192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "maskable"
     }, {
       "src": "./ressources/icon512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "maskable"
     }],
   "start_url": "http://bluecactus.freeboxos.fr/Sequence/index.html",
   "display": "standalone",
