--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
       "type": "image/png",
       "purpose": "maskable"
     }],
-  "start_url": "http://bluecactus.freeboxos.fr/Sequence/index.html",
+  "start_url": "https://bluecactus.freeboxos.fr/Sequence/index.html",
   "display": "standalone",
   "background_color": "#353333",
   "orientation": "landscape",
